--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,21 +4,19 @@
 
 	<string name="edit_sudoku">Edit sudoku</string>
 
-	<string name="puzzle_folders">OpenSudoku puzzle folders</string>
-
 	<string name="version">Version %s</string>
-	<string name="homepage" translatable="false">http://opensudoku.moire.org</string>
-	<string name="email" translatable="false">&lt;opensudoku@moire.org&gt;</string>
+	<string name="homepage" translatable="false">http://www.kimkha.com</string>
+	<string name="email" translatable="false">&lt;nkimkha@gmail.com&gt;</string>
 	<string name="send_me_bugs">
         If you run into bug which you want to get fixed, don\'t hesitate to contact me by e-mail
 		or use issue tracker on project\'s homepage.
 	</string>
 
     <string name="current_developers_label">Current Developer</string>
-    <string name="current_developers" translatable="false">Óscar García Amor</string>
+    <string name="current_developers" translatable="false">Nguyễn Kim Kha</string>
 
     <string name="old_developers_label">Old Developers</string>
-    <string name="old_developers" translatable="false">Roman Mašek</string>
+    <string name="old_developers" translatable="false">Roman Mašek \nÓscar García Amor</string>
 
     <string name="localization_contributors_label">Localization Contributors</string>
     <string name="localization_contributors" translatable="false">Vit Hnilica\nMartin Sobola\nMartin Helff\nDiego Pierotto</string>
